--- a/index.html
+++ b/index.html
@@ -73,10 +73,13 @@ body {
 
 <script>
 const allowedQueries = [
-  'example1',
-  'example2',
-  'allowed term',
-  'another one'
+  'tintosh',
+  'tintot',
+  'library',
+  'find',
+  'leader',
+  'good leader',
+  'amazing leader'
 ];
 
 const blockedPatterns = [
@@ -84,7 +87,15 @@ const blockedPatterns = [
   'country',
   'rights',
   'robb',
-  'government'
+  'government',
+  'escape',
+  'freedom',
+  'unblock',
+  'method',
+  'politics',
+  'dumb',
+  'questions',
+  'glaze leader'
 ];
 
 function performSearch(event) {
